src/test/ui/type-alias-impl-trait/bound_reduction2.stderr
error: defining opaque type use does not fully define opaque type: generic parameter `V` is specified as concrete type `<T as TraitWithAssoc>::Assoc`
  --> $DIR/bound_reduction2.rs:17:1
   |
LL | / fn foo_desugared<T: TraitWithAssoc>(_: T) -> Foo<T::Assoc> {
LL | |     ()
LL | | }
   | |_^

error: could not find defining uses
  --> $DIR/bound_reduction2.rs:10:1
   |
LL | type Foo<V> = impl Trait<V>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

